# lxe_pulsefinder

./: .gitignore  README  get_lxe_template.ipynb  inspect_fit.ipynb  lxe.template  lxe_test.ipynb  meg.template  meg_template.ipynb  template_fit.py  test.ipynb  test_fit_resolution.py  test_fit_resolution_analysis.ipynb
algorithm/: CMakeLists.txt  GlobalFitAlgorithm.cc  GlobalFitAlgorithm.hh  ModelFunction.cc  NormalOrder.hh  Print.hh  test.cc
algorithm/standalone/: Additions.hh  CMakeLists.txt  GlobalFitAlgorithm.hh  ModelFunction.hh  NormalOrder.hh  PositionAlgorithm.hh
